--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "exactOptionalPropertyTypes": false,
+    "noUnusedParameters": false,
     "paths": {
       "@/*": ["./src/*"]
     }
